# dictionar-traduceri

./: .gitignore  CMakeLists.txt  README.md  app.cpp  main.cpp
.github/workflows/: ci.yml
include/: Dictionary.h  DictionaryNode.h  DictionaryStats.h  Node.h  TranslationEntry.h  Word.h
src/: Dictionary.cpp  DictionaryNode.cpp  DictionaryStats.cpp  Node.cpp  TranslationEntry.cpp  Word.cpp
